--- a/index-1.html
+++ b/index-1.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Traveler - Index 1</title>
+    <title>Cool Market</title>
 
 
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
