--- a/index-1.html
+++ b/index-1.html
@@ -72,239 +72,27 @@
                         </li>
                         <li><a href="success-payment.html">About</a>
                         </li>
-                        <li><a href="feature-typography.html">Features</a>
+                        <li><a href="feature-typography.html">Markets</a>
                             <ul>
-                                <li><a href="feature-typography.html">Typography</a>
+                                <li><a href="#">Mutian</a>
                                 </li>
-                                <li><a href="feature-icons.html">Icons</a>
+                                <li><a href="#">Nancy</a>
                                 </li>
-                                <li><a href="feature-forms.html">Forms</a>
+                                <li><a href="#">Ruifeng</a>
                                 </li>
-                                <li><a href="feature-icon-effects.html">Icon Effects</a>
+                                <li><a href="#">Vencci</a>
                                 </li>
-                                <li><a href="feature-elements.html">Elements</a>
-                                </li>
-                                <li><a href="feature-grid.html">Grid</a>
-                                </li>
-                                <li><a href="feature-hovers.html">Hover effects</a>
-                                </li>
-                                <li><a href="feature-lightbox.html">Lightbox</a>
-                                </li>
-                                <li><a href="feature-media.html">Media</a>
+                                <li><a href="#">Yue</a>
                                 </li>
                             </ul>
                         </li>
-                        <li><a href="hotels.html">Hotels</a>
-                            <ul>
-                                <li><a href="hotel-details.html">Details</a>
-                                    <ul>
-                                        <li><a href="hotel-details.html">Layout 1</a>
-                                        </li>
-                                        <li><a href="hotel-details-2.html">Layout 2</a>
-                                        </li>
-                                        <li><a href="hotel-details-3.html">Layout 3</a>
-                                        </li>
-                                        <li><a href="hotel-details-4.html">Layout 4</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li><a href="hotel-payment.html">Payment</a>
-                                    <ul>
-                                        <li><a href="hotel-payment.html">Registered</a>
-                                        </li>
-                                        <li><a href="hotel-payment-registered-card.html">Existed Cards</a>
-                                        </li>
-                                        <li><a href="hotel-payment-unregistered.html">Unregistered</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li><a href="hotel-search.html">Search</a>
-                                    <ul>
-                                        <li><a href="hotel-search.html">Layout 1</a>
-                                        </li>
-                                        <li><a href="hotel-search-2.html">Layout 2</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li><a href="hotels.html">Results</a>
-                                    <ul>
-                                        <li><a href="hotels.html">Layout 1</a>
-                                        </li>
-                                        <li><a href="hotels-search-results-2.html">Layout 2</a>
-                                        </li>
-                                        <li><a href="hotels-search-results-3.html">Layout 3</a>
-                                        </li>
-                                        <li><a href="hotels-search-results-4.html">Layout 4</a>
-                                        </li>
-                                        <li><a href="hotel-search-results-5.html">Layout 5</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
+                        <li><a href="#">News</a>
                         </li>
-                        <li><a href="flights.html">Flights</a>
-                            <ul>
-                                <li><a href="flight-payment.html">Payment</a>
-                                    <ul>
-                                        <li><a href="flight-payment.html">Registered</a>
-                                        </li>
-                                        <li><a href="flight-payment-registered-card.html">Existed Cards</a>
-                                        </li>
-                                        <li><a href="flight-payment-unregistered.html">Unregistered</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li><a href="flight-search.html">Search</a>
-                                    <ul>
-                                        <li><a href="flight-search.html">Layout 1</a>
-                                        </li>
-                                        <li><a href="flight-search-2.html">Layout 2</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li><a href="flights.html">List</a>
-                                    <ul>
-                                        <li><a href="flights.html">Layout 1</a>
-                                        </li>
-                                        <li><a href="flights-search-results-2.html">Layout 2</a>
-                                        </li>
-                                        <li><a href="flights-search-results-3.html">Layout 3</a>
-                                        </li>
-                                        <li><a href="flights-search-results-4.html">Layout 4</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
+                        <li><a href="#">Contacts</a>
                         </li>
-                        <li><a href="rentals.html">Rentals</a>
-                            <ul>
-                                <li><a href="rentals-details.html">Details</a>
-                                    <ul>
-                                        <li><a href="rentals-details.html">Layout 1</a>
-                                        </li>
-                                        <li><a href="rentals-details-2.html">Layout 2</a>
-                                        </li>
-                                        <li><a href="rentals-details-3.html">Layout 3</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li><a href="rental-payment.html">Payment</a>
-                                    <ul>
-                                        <li><a href="rental-payment.html">Registered</a>
-                                        </li>
-                                        <li><a href="rental-payment-registered-card.html">Existed Cards</a>
-                                        </li>
-                                        <li><a href="rental-payment-unregistered.html">Unregistered</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li><a href="rentals-search.html">Search</a>
-                                    <ul>
-                                        <li><a href="rentals-search.html">Layout 1</a>
-                                        </li>
-                                        <li><a href="rentals-search-2.html">Layout 2</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li><a href="rentals.html">Results</a>
-                                    <ul>
-                                        <li><a href="rentals.html">Layout 1</a>
-                                        </li>
-                                        <li><a href="rentals-search-results-2.html">Layout 2</a>
-                                        </li>
-                                        <li><a href="rentals-search-results-3.html">Layout 3</a>
-                                        </li>
-                                        <li><a href="rentals-search-results-4.html">Layout 4</a>
-                                        </li>
-                                        <li><a href="rentals-search-results-5.html">Layout 5</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
+                        <li><a href="#">Activities</a>
                         </li>
-                        <li><a href="cars.html">Cars</a>
-                            <ul>
-                                <li><a href="car-details.html">Details</a>
-                                </li>
-                                <li><a href="car-payment.html">Payment</a>
-                                    <ul>
-                                        <li><a href="car-payment.html">Registered</a>
-                                        </li>
-                                        <li><a href="car-payment-registered-card.html">Existed Cards</a>
-                                        </li>
-                                        <li><a href="car-payment-unregistered.html">Unregistered</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li><a href="car-search.html">Search</a>
-                                    <ul>
-                                        <li><a href="car-search.html">Layout 1</a>
-                                        </li>
-                                        <li><a href="car-search-2.html">Layout 2</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li><a href="cars.html">Results</a>
-                                    <ul>
-                                        <li><a href="cars.html">Layout 1</a>
-                                        </li>
-                                        <li><a href="cars-results-2.html">Layout 2</a>
-                                        </li>
-                                        <li><a href="cars-results-3.html">Layout 3</a>
-                                        </li>
-                                        <li><a href="cars-results-4.html">Layout 4</a>
-                                        </li>
-                                        <li><a href="cars-results-5.html">Layout 5</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                        <li><a href="activities.html">Activities</a>
-                            <ul>
-                                <li><a href="activitiy-details.html">Details</a>
-                                    <ul>
-                                        <li><a href="activitiy-details.html">Layout 1</a>
-                                        </li>
-                                        <li><a href="activitiy-details-2.html">Layout 2</a>
-                                        </li>
-                                        <li><a href="activitiy-details-3.html">Layout 3</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li><a href="activity-search.html">Search</a>
-                                    <ul>
-                                        <li><a href="activity-search.html">Layout 1</a>
-                                        </li>
-                                        <li><a href="activity-search-2.html">Layout 2</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li><a href="activitiy-payment.html">Payment</a>
-                                    <ul>
-                                        <li><a href="activitiy-payment.html">Registered</a>
-                                        </li>
-                                        <li><a href="activity-payment-registered-card.html">Existed Cards</a>
-                                        </li>
-                                        <li><a href="activitiy-payment-unregistered.html">Unregistered</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li><a href="activities.html">Results</a>
-                                    <ul>
-                                        <li><a href="activities.html">Layout 1</a>
-                                        </li>
-                                        <li><a href="activities-search-results-2.html">Layout 2</a>
-                                        </li>
-                                        <li><a href="activities-search-results-3.html">Layout 3</a>
-                                        </li>
-                                        <li><a href="activities-search-results-4.html">Layout 4</a>
-                                        </li>
-                                        <li><a href="activities-search-results-5.html">Layout 5</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
+                        <li><a href="#">Users</a>
                         </li>
                     </ul>
                 </div>
